--- a/4-输入输出.md
+++ b/4-输入输出.md
@@ -1,17 +1,9 @@
 # 输入输出
 
 c++是c语言的进化，所以可以使用c语言的输入输出函数`scanf`，`printf`，当然c++也有它特有的输入输出方法`cin`，`cout`。
-下面我看一下特有的输入输出
 
-```c++
-<%- include("./code/cincout.cpp") %>
-```
+因为我们学习的目的是为了信息竞赛，且经过笔者多年经验，我们具体需要学习的是`scanf`和`printf`,`cin,cout`只作了解就可以了。
 
-如果不想每一次都在`cin,cout`之前使用`std::`这个命名空间，也可以按下面的方式来写
-
-```c++
-<%- include("./code/cincout2.cpp") %>
-```
 
 下面的我们来具体看一下如何输入输出数据
 
@@ -30,21 +22,6 @@ c风格读取代码：
  - 输入输出时要指定标记（`%d %f %lf`）
  - 速度快
  - 读取数字的时候会略过不可见字符（空格，换行符）
-
-```c++
-<%- include("./code/c_in_number.cpp") %>
-```
-
-c++风格读取代码：
-
- - 输入输出时不要指定标记，根据变量的类型自动判定
- - 速度相对较慢
- - 读取数字的时候会略过不可见字符（空格，换行符）
- - 在对一些格式化的输出的时间不太好用，例如输出：`number is %8d \n\n,hello world`
-
-```c++
-<%- include("./code/c++_in_number.cpp") %>
-```
 
 
 ## 读取字符
@@ -69,7 +46,36 @@ c++风格
 <%- include("./code/c++_read_char.cpp") %>
 ```
 
-## 格式化输出
+下面我看一下特有的输入输出
+
+```c++
+<%- include("./code/cincout.cpp") %>
+```
+
+如果不想每一次都在`cin,cout`之前使用`std::`这个命名空间，也可以按下面的方式来写
+
+```c++
+<%- include("./code/cincout2.cpp") %>
+```
+## printf格式化输出
+
+ - 进制相关
+    - %x 16进制显示
+    - %o 8进制显示
+    - %d 10进制显示
+ - 精度相关
+    - %.8lf double类型浮点数，保留8位小数，四舍五入
+    - %.8f  float类型浮点数，保留8位小数，四舍五入
+ - 宽度相关
+    - `printf("%4d",12)`, 4个宽度输出,右对齐
+    - `printf("%04d",12)`, 4个宽度输出,右对齐，用0补全
+    - `printf("%-4d",12)`, 4个宽度输出,左对齐
+
+```c++
+<%- include("code/printf_format.cpp") %>
+```
+
+## cout格式化输出
 
  - 进制相关
     - `std::hex` 16进制显示
