--- a/6-运算符.md
+++ b/6-运算符.md
@@ -26,7 +26,7 @@
 实例：
 
 ```c++
-<%- include("./code/op1.cpp") %>
+<%- include("./code/op1_cstyle.cpp") %>
 ```
 
 结果如下：
@@ -56,7 +56,7 @@ Line 7 - c 的值是 10
 实例：
 
 ```c++
-<%- include("./code/op2.cpp") %>
+<%- include("./code/op2_style.cpp") %>
 ```
 
 结果如下：
@@ -89,7 +89,7 @@ Line 5 - b 大于或等于 a
 实例：
 
 ```c++
-<%- include("./code/op3.cpp") %>
+<%- include("./code/op3_style.cpp") %>
 ```
 
 结果如下：
