--- a/数组.md
+++ b/数组.md
@@ -1,12 +1,10 @@
-# 数组
-
 ## 引言
 
 如果你需要写一个程序记录3个人的成绩
 
 ```c++
 int a,b,c;
-scanf("%d%d%d",&a,&b,&c);
+cin >> a >> b >> c;
 ```
 
 那如果你需要记录1000个人的成绩呢？就不能用定义一个一个变量的方式了，要使用数组
@@ -14,7 +12,7 @@ scanf("%d%d%d",&a,&b,&c);
 ```c++
 int a[1000];
 for(int i = 0; i<= 999 ;i++)
-    scanf("%d",&a[i]);
+    cin >> a[i];
 ```
 
 ### 1. 什么是数组？
@@ -46,7 +44,7 @@ char bar[] = {'a','1','2'};
  - 使用下标访问数组里的一个元素，就像普通的变量一样
    ```c++
    int a[3];        //定义
-   scanf("%d",&a[1]);     //输入
+   cin >> a[1];     //输入
    a[0] = 1;        //赋值
    a[0] = a[1] + a[2]; //运算
    ```
