--- a/3-数据类型.md
+++ b/3-数据类型.md
@@ -2,10 +2,10 @@
 
 $C++$有以下5种基本数据类型
 
-| 类型     | 关键字 | printf标志 | 标志对应单词 |
-|----------|--------|------------|--------------|
-| 布尔型   | bool   | %d         | decimal      |
-| 字符型   | char   | %c         | char         |
-| 整型     | int    | %d         | decimal      |
-| 浮点型   | float  | %f         | float        |
-| 双浮点型 | double | %lf        | long float   |
+| 类型     | 关键字 | 占空间大小 | printf标志 | 标志对应单词 |
+|----------|--------|------------|------------|--------------|
+| 布尔型   | bool   | 1 Byte     | %d         | decimal      |
+| 字符型   | char   | 1 Byte     | %c         | char         |
+| 整型     | int    | 4 Byte     | %d         | decimal      |
+| 浮点型   | float  | 4 Byte     | %f         | float        |
+| 双浮点型 | double | 8 Byte     | %lf        | long float   |
