--- a/4-输入输出.md
+++ b/4-输入输出.md
@@ -2,11 +2,10 @@
 
 c++是c语言的进化，所以可以使用c语言的输入输出函数`scanf`，`printf`，当然c++也有它特有的输入输出方法`cin`，`cout`。
 
-因为我们学习的目的是为了信息竞赛，且经过笔者多年经验，我们具体需要学习的是`scanf`和`printf`,`cin,cout`只作了解就可以了。
+<!--因为我们学习的目的是为了信息竞赛，且经过笔者多年经验，我们具体需要学习的是`scanf`和`printf`,`cin,cout`只作了解就可以了。-->
 
 
 下面的我们来具体看一下如何输入输出数据
-
 
 ## 读取数字
 
@@ -23,6 +22,31 @@ c风格读取代码：
  - 速度快
  - 读取数字的时候会略过不可见字符（空格，换行符）
 
+c++风格读取代码：
+
+ - 开启**IO不与c同步优化**后，快！
+ - 读取的时候简单，不用记指定的标记
+ - 格式化输出的时候要写的字多，记的东西多，。
+ - 在对一些格式化的输出的时间不太好用，例如输出：`number is %8d \n\n,hello world`，但在真实比赛中很少用到
+
+关闭同步的方式：
+
+```c++
+std::ios::sync_with_stdio(false);
+cin.tie(0); //来解除std::cin和std::cout之间的绑定，提高效率。
+```
+
+c++11以上的语言可以使用如下的匿名函数(Lambda捕获)
+
+```c++
+static auto _=[]()
+{
+    ios::sync_with_stdio(false);
+    cin.tie(0);
+    return 0;
+}();
+```
+
 
 ## 读取字符
 
@@ -34,16 +58,17 @@ newline
 hello world
 ```
 
-c风格
-
-```c++
-<%- include("./code/c_read_char.cpp") %>
-```
 
 c++风格
 
 ```c++
 <%- include("./code/c++_read_char.cpp") %>
+```
+
+c风格
+
+```c++
+<%- include("./code/c_read_char.cpp") %>
 ```
 
 下面我看一下特有的输入输出
@@ -56,23 +81,6 @@ c++风格
 
 ```c++
 <%- include("./code/cincout2.cpp") %>
-```
-## printf格式化输出
-
- - 进制相关
-    - %x 16进制显示
-    - %o 8进制显示
-    - %d 10进制显示
- - 精度相关
-    - %.8lf double类型浮点数，保留8位小数，四舍五入
-    - %.8f  float类型浮点数，保留8位小数，四舍五入
- - 宽度相关
-    - `printf("%4d",12)`, 4个宽度输出,右对齐
-    - `printf("%04d",12)`, 4个宽度输出,右对齐，用0补全
-    - `printf("%-4d",12)`, 4个宽度输出,左对齐
-
-```c++
-<%- include("code/printf_format.cpp") %>
 ```
 
 ## cout格式化输出
@@ -95,3 +103,22 @@ c++风格
 ```c++
 <%- include("code/cout_format.cpp") %>
 ```
+
+## printf格式化输出
+
+ - 进制相关
+    - %x 16进制显示
+    - %o 8进制显示
+    - %d 10进制显示
+ - 精度相关
+    - %.8lf double类型浮点数，保留8位小数，四舍五入
+    - %.8f  float类型浮点数，保留8位小数，四舍五入
+ - 宽度相关
+    - `printf("%4d",12)`, 4个宽度输出,右对齐
+    - `printf("%04d",12)`, 4个宽度输出,右对齐，用0补全
+    - `printf("%-4d",12)`, 4个宽度输出,左对齐
+
+```c++
+<%- include("code/printf_format.cpp") %>
+```
+
