--- a/6-运算符.md
+++ b/6-运算符.md
@@ -26,19 +26,19 @@
 实例：
 
 ```c++
-<%- include("./code/op1_cstyle.cpp") %>
+<%- include("./code/op1.cpp") %>
 ```
 
 结果如下：
 
 ```plaintext
-Line 1 - c 的值是 31
-Line 2 - c 的值是 11
-Line 3 - c 的值是 210
-Line 4 - c 的值是 2
-Line 5 - c 的值是 1
-Line 6 - c 的值是 10
-Line 7 - c 的值是 10
+c: 0
+c: 11
+c: 210
+c: 2
+c: 1
+c: 10
+c: 10
 ````
 
 ## 关系运算符
@@ -56,17 +56,17 @@ Line 7 - c 的值是 10
 实例：
 
 ```c++
-<%- include("./code/op2_style.cpp") %>
+<%- include("./code/op2.cpp") %>
 ```
 
 结果如下：
 
 ```plaintext
-Line 1 - a 不等于 b
-Line 2 - a 不小于 b
-Line 3 - a 大于 b
-Line 4 - a 小于或等于 b
-Line 5 - b 大于或等于 a
+Line 1 : a 不等于 b
+Line 2 : a 不小于 b
+Line 3 : a 大于 b
+Line 4 : a 小于或等于 b
+Line 5 : b 大于或等于 a
 ```
 
 ## 逻辑运算符
@@ -89,16 +89,16 @@ Line 5 - b 大于或等于 a
 实例：
 
 ```c++
-<%- include("./code/op3_style.cpp") %>
+<%- include("./code/op3.cpp") %>
 ```
 
 结果如下：
 
 ```plaintext
-Line 1 - 条件为真
-Line 2 - 条件为真
-Line 4 - 条件不为真
-Line 5 - 条件为真
+Line 1 : 条件为真
+Line 2 : 条件为真
+Line 4 : 条件不为真
+Line 5 : 条件为真
 ```
 
 ## 位运算符
