--- a/7-控制结构.md
+++ b/7-控制结构.md
@@ -35,7 +35,16 @@ if ( 条件 )
 样例：输入一个分数，判断是否及格，及格输出YES，否则什么也不做。
 
 ```c
-<%- include("code/if/1.cpp") %>
+#include <iostream>
+using namespace std;
+
+int main(){ 
+    int a;
+    cin >> a;
+    if( a>=60 ) //是否>=60
+        cout <<"yes\n";
+    return 0;
+}
 ```
 
 
@@ -66,8 +75,21 @@ else
 ```
 
 样例：输入一个分数，判断是否及格
-```
-<%- include("code/if/2.cpp") %>
+
+```c++
+#include <bits/stdc++.h>    //万能头文件
+using namespace std;
+typedef long long ll;
+
+int main(){
+    int a; //定义一个变量
+    cin >> a; //输入一个值
+    if( a >= 60)    //if只能控制后面的一句话
+        cout << "YES\n";
+    else
+        cout << "NO\n";
+    return 0;
+}
 ```
 **注意**
 
@@ -82,7 +104,24 @@ else
 思想下面的几个代码的运行结果
 
 ```c++
-<%- include("code/if/3.cpp") %>
+#include <bits/stdc++.h>    //万能头文件
+using namespace std;
+typedef long long ll;
+
+int main(){
+    int a; //定义一个变量
+    cin >> a;
+    if( a >= 60)    //if只能控制后面的一句话
+        //下面的if else 形成一句话 ，被上面的if(a>=60) 控制
+        if ( a>= 70)
+            cout << ">= 70\n";
+        else
+            cout << ">=60 ,< 70\n";
+    else
+        if( a > 30)
+            cout << "a > 30,a<60\n";
+    return 0;
+}
 ```
 任务：编写这个代码，回答下面的问题
 
@@ -90,7 +129,24 @@ else
 
 
 ```c++
-<%- include("code/if/3.cpp") %>
+#include <bits/stdc++.h>    //万能头文件
+using namespace std;
+typedef long long ll;
+
+int main(){
+    int a; //定义一个变量
+    cin >> a; //输入一个值
+    if( a >= 60)    //if只能控制后面的一句话
+        //下面的if else 形成一句话 ，被上面的if(a>=60) 控制
+        if ( a>= 70)
+            cout << ">= 70\n";
+        else
+            cout << ">=60 ,< 70\n";
+    else
+        if( a > 30)
+            cout << "a > 30,a<60\n";
+    return 0;
+}
 ```
 
  - 分别输入`60，70，80，90`查看输出结果是什么，分析原因
@@ -104,7 +160,48 @@ else
 编写运行下面的代码，分别输入`50 60 75 85 95`，查看输出结果是什么，分析原因。
 
 ```c++
-<%- include("code/if/5.cpp") %>
+#include <bits/stdc++.h>    //万能头文件
+using namespace std;
+typedef long long ll;
+
+int main(){
+    int a; //定义一个变量
+    cin >> a;//输入一个值
+    if( a >= 90)  //60
+        cout << "you xiu\n";
+    else if ( a >= 80 )
+        cout << "liang hao\n";
+    else if( a >=60)
+        cout << "ji ge\n";
+    else
+        cout << "bu ji ge\n";
+    return 0;
+}
+```
+
+与下面的写
+```c++
+#include <bits/stdc++.h>    //万能头文件
+using namespace std;
+typedef long long ll;
+
+int main(){
+    int a; //定义一个变量
+    cin >> a;//输入一个值
+    if( a >= 90)  //60
+        cout << "you xiu\n";
+    else {
+        if ( a >= 80 )
+            cout << "liang hao\n";
+        else {
+            if( a >=60)
+                cout << "ji ge\n";
+            else
+                cout << "bu ji ge\n";
+        }
+    }
+    return 0;
+}
 ```
 
 - `else`和它上面的最近的同级别的`if`配对
