--- a/8-循环结构.md
+++ b/8-循环结构.md
@@ -47,13 +47,36 @@ for( s1 : s2 : s3) {
 例子1 ：输出1到10，然后输出10到1
 
 ```c
-<%- include("code/for1.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for(int i=1;i<=10;++i){ //输出1 到 10
+        cout << i << " ";
+    }
+    cout << endl;
+    for(int i=10;i>=1;--i) //这一行没有带括号{}，
+        cout << i << " "; //for与if 一样默认控制下面的一句话
+    cout << endl;
+
+    return 0;
+}
 ```
 
 例子2 ：计算1到100的和
 
 ```c
-<%- include("code/for2.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    int sum = 0; // sum 是英文[求和]的意思
+    for(int i=1;i<=100;++i){ 
+        sum+= i;
+    }
+    cout << sum << endl;
+    return 0;
+}
 ```
 
 **特别说明：** for小括号内的三条语句都可以写成空语句，看下面的代码
@@ -61,7 +84,21 @@ for( s1 : s2 : s3) {
 代码3
 
 ```c
-<%- include("code/for3.cpp") %>
+
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    int i=1;
+    for( ; i < 10 ; ){
+        cout << i << " ";
+        i = i+2;
+    } // 想一想这个for的输出结果是什么
+    // 这个for的 s1 是空语句 ; 执行这名话相当于什么也什么做
+    // s2 是一个判断条件
+    // s3 是空语句 ; 执行这名话相当于什么也什么做
+    return 0;
+}
 ```
 
 输出结果是：`1 3 5 7 9 `
@@ -69,7 +106,18 @@ for( s1 : s2 : s3) {
 代码4
 
 ```c
-<%- include("code/for4.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for( ; ; ){
+        cout << "hello" << endl;
+    } // 想一想这个for的输出结果是什么
+    // 这个for的 s1 是空语句 ; 执行这名话相当于什么也什么做
+    // s2 是一个空语句 ; c++ 认为空语句的条件是真
+    // s3 是空语句 ; 执行这名话相当于什么也什么做
+    return 0;
+}
 ```
 
 输出结果是：无限输出`hello`,可以按`ctrl + c` 强制终止程序
@@ -80,7 +128,17 @@ for( s1 : s2 : s3) {
 > continue ： 继续，遇到它，跳转到s3去执行
 
 ```c
-<%- include("code/for5.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for(int i=1;i<=10;++i){
+        if( i == 5)
+            continue;
+        cout << i << " ";
+    }
+    return 0;
+}
 ```
 
 输出结果是：`1 2 3 4 6 7 8 9 10 ` 没有5
@@ -90,7 +148,17 @@ for( s1 : s2 : s3) {
 > break : 打断，遇到它，终止控制break的那个for语句
 
 ```c
-<%- include("code/for6.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for(int i=1;i<=10;++i){
+        if( i == 5)
+            break;
+        cout << i << " ";
+    }
+    return 0;
+}
 ```
 
 输出结果是：`1 2 3 4 ` 没有5和后面的数字
@@ -98,7 +166,19 @@ for( s1 : s2 : s3) {
 ## 嵌套循环
 
 ```c
-<%- include("code/for7.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for(int i=1;i<=3;++i){
+        cout << i << ": ";
+        for(int j=1;j<=i;++j){
+            cout << j << " ";
+        }
+        cout << endl;
+    }
+    return 0;
+}
 ```
 
 输出结果如下：
@@ -112,7 +192,18 @@ for( s1 : s2 : s3) {
 例子：输出9x9乘法表
 
 ```c
-<%- include("code/for8.cpp") %>
+#include <bits/stdc++.h> //万能头文件
+using namespace std;
+
+int main(){
+    for(int i=1;i<=9;++i){
+        for(int j=1;j<=i;++j){
+            cout << i <<"x" <<j << "=" << i*j;
+        }
+        cout << endl;
+    }
+    return 0;
+}
 ```
 
 
